<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <!-- encabezado -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#1F3F77"
            android:padding="30dp"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacto"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contacto_descripcion"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:gravity="center" />

        </LinearLayout>



        <!-- planilla de contacto -->


        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tu_nombre"
            android:inputType="textPersonName"
            android:padding="14dp"
            android:layout_marginBottom="15dp" />


        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tu_telefono"
            android:inputType="phone"
            android:padding="14dp"
            android:layout_marginBottom="15dp" />


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/tu_email"
            android:inputType="textEmailAddress"
            android:padding="14dp" />


        <EditText
            android:id="@+id/edtAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/asunto"
            android:inputType="text"
            android:padding="14dp"
            android:layout_marginBottom="15dp" />


        <!-- dato de contacto-->


        <EditText
            android:id="@+id/edtMensaje"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="15dp"
            android:gravity="top"
            android:hint="@string/escribi_mensaje"
            android:inputType="textMultiLine"
            android:padding="14dp" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#1F3F77"
            android:padding="12dp"
            android:text="@string/enviar"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


        <!-- dirección -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/informacion_contacto"
            android:textColor="#1F3F77"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:padding="20dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="#1F3F77"
                android:gravity="center"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cordoba_argentina"
                android:textSize="16sp"
                android:textColor="#444444"
                android:gravity="center" />

        </LinearLayout>



        <!-- telefono -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:padding="20dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="#1F3F77"
                android:gravity="center"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_telefono"
                android:textSize="16sp"
                android:textColor="#444444"
                android:gravity="center" />

        </LinearLayout>



        <!-- email -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:padding="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="#1F3F77"
                android:gravity="center"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_contacto"
                android:textSize="16sp"
                android:textColor="#444444"
                android:gravity="center" />

        </LinearLayout>


        <!--  Footer  -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0A2240"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INMOSMART"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="Conectamos personas con su próximo hogar."
                android:textColor="#B0BEC5"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONTACTO"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="Córdoba, Argentina\ninfo@inmosmart.com"
                android:textColor="#B0BEC5"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="© 2026 InmoSmart - Todos los derechos reservados"
                android:textColor="#78909C"
                android:textSize="10sp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>